applications/permission-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: permission-manager-ingress
  namespace: permission-manager
spec:
  rules:
    - host: perms.cloudnativerioja.com
      http:
        paths:
          - backend:
              service:
                name: permission-manager
                port:
                  number: 4000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - perms.cloudnativerioja.com
      secretName: tls-perms-cloudnativerioja-com
